--- a/reactjs-todolist/src/index.css
+++ b/reactjs-todolist/src/index.css
@@ -19,7 +19,7 @@ button {
   display: flex;
   flex-direction: column;
   padding: 14px;
-  background: #eff6ff;
+  background: #08172c;
   gap: 14px;
 }
 
@@ -44,7 +44,7 @@ header input {
 }
 
 header button {
-  border-radius: 14px;
+  border-radius: 20px;
   background: transparent;
   transition-duration: 200ms;
   cursor: pointer;
@@ -59,7 +59,7 @@ header input {
   padding: 14px 18px;
   border: none;
   outline: none;
-  background: white;
+  background: rgb(208, 232, 247);
 }
 
 p {
@@ -78,7 +78,7 @@ p {
   gap: 14px;
   padding: 14px;
   border-radius: 14px;
-  background: white;
+  background: rgb(205, 222, 228);
 }
 
 .todoItem p {
